k8s/service.yaml
# Service: nginx
# -------------------------
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: rasikapur
spec:
  type: NodePort
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodeport: 30007
